--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,7 @@
   --orange-darker: #4A1E14;
 
   /* Black Color Palette */
+  --black-light-active: #B9B9B9;
   --black-normal: #1E1E1E;
   --black-normal-hover: #1B1B1B;
   --black-normal-active: #181818;
@@ -122,6 +123,7 @@
   --color-black-normal: var(--black-normal);
   --color-black-normal-hover: var(--black-normal-hover);
   --color-black-normal-active: var(--black-normal-active);
+  --color-black-light-active: var(--black-light-active);
 
   --color-white-normal: var(--white-normal);
   --color-white-dark-active: var(--white-dark-active);
