--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: #FFFFFF;
   --foreground: #1E1E1E;
   --card: #FCFCFC;
   --card-foreground: oklch(0.145 0 0);
