--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@
 
   /* Orange Color Palette */
   --orange-light: #FBEEEB;
+  --orange-light-hover: #F9E6E1;
   --orange-light-active: #F2CBC1;
   --orange-normal: #D45738;
   --orange-normal-hover: #BF4E32;
@@ -116,6 +117,7 @@
 
   /* Custom Color Variables */
   --color-orange-light: var(--orange-light);
+  --color-orange-light-hover: var(--orange-light-hover);
   --color-orange-light-active: var(--orange-light-active);
   --color-orange-normal: var(--orange-normal);
   --color-orange-normal-hover: var(--orange-normal-hover);
