style: add light grey color variable and update ChatWindow background color

--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@
   --white-dark-active: #717171;
 
   /* Gray Color Palette */
+  --grey-light: #F8F8F8;
   --grey-dark-active: #535353;
 }
 
@@ -135,6 +136,7 @@
   --color-white-normal: var(--white-normal);
   --color-white-dark-active: var(--white-dark-active);
 
+  --color-grey-light: var(--grey-light);
   --color-grey-dark-active: var(--grey-dark-active);
 }
 
